add API fetch by name
