# app/BE/routes/cdrcare_center.js
@@ -1,5 +1,5 @@
 import express from "express";
-import { Op } from "sequelize";
+import { Sequelize, Op } from "sequelize";
 import Region from "../database/models/region";
 import CdrCareCenter from "../database/models/cdrcare-center";
 
@@ -18,11 +18,17 @@ router.get("/", async (req, res, next) => {
       include: [
         {
           model: Region,
-          where: filters,
           attributes: [],
         },
       ],
-      attributes: ["center_id", "name", "lat", "lng"],
+      attributes: [
+        "center_id",
+        "name",
+        "lat",
+        "lng",
+        [Sequelize.col("Region.region_id"), "region_id"],
+        [Sequelize.col("Region.region_name"), "region_name"],
+      ],
     });
     res.json(centers);
   } catch (err) {
@@ -37,7 +43,36 @@ router.get("/:id", async (req, res, next) => {
       where: {
         center_id: req.params.id,
       },
-      attributes: ["center_id", "name", "lat", "lng"],
+      attributes: [
+        "center_id",
+        "name",
+        "lat",
+        "lng",
+        [Sequelize.col("Region.region_id"), "region_id"],
+        [Sequelize.col("Region.region_name"), "region_name"],
+      ],
+    });
+    res.json(center);
+  } catch (err) {
+    console.error(err);
+    next(err);
+  }
+});
+
+router.get("/:name", async (req, res, next) => {
+  try {
+    const center = await CdrCareCenter.findOne({
+      where: {
+        name: req.params.name,
+      },
+      attributes: [
+        "center_id",
+        "name",
+        "lat",
+        "lng",
+        [Sequelize.col("Region.region_id"), "region_id"],
+        [Sequelize.col("Region.region_name"), "region_name"],
+      ],
     });
     res.json(center);
   } catch (err) {
