# app/BE/swagger/build.yaml
@@ -53,6 +53,29 @@ paths:
                     type: integer
                   region_name:
                     type: string
+  '/regions/{name}':
+    get:
+      tags:
+        - region
+      summary: get region by name
+      description: null
+      parameters:
+        - name: name
+          in: path
+          required: true
+          description: 구 이름
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  region_id:
+                    type: integer
+                  region_name:
+                    type: string
   /centers:
     get:
       tags:
@@ -103,22 +126,51 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    center_id:
-                      type: integer
-                    name:
-                      type: string
-                    lat:
-                      type: number
-                    lng:
-                      type: number
-                    region_id:
-                      type: integer
-                    region_name:
-                      type: string
+                type: object
+                properties:
+                  center_id:
+                    type: integer
+                  name:
+                    type: string
+                  lat:
+                    type: number
+                  lng:
+                    type: number
+                  region_id:
+                    type: integer
+                  region_name:
+                    type: string
+  '/centers/{name}':
+    get:
+      tags:
+        - children care center
+      summary: get centers by name
+      description: null
+      parameters:
+        - name: name
+          in: path
+          required: true
+          description: 어린이집 이름
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  center_id:
+                    type: integer
+                  name:
+                    type: string
+                  lat:
+                    type: number
+                  lng:
+                    type: number
+                  region_id:
+                    type: integer
+                  region_name:
+                    type: string
 tags:
   - name: region
   - name: children care center
